# fable5-dataset

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/fable5_dataset/: cli.py  loader.py
