[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fable5-dataset"
version = "0.1.0"
description = "Load, preprocess, and manage the Fable5 agent trace datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "datasets>=2.20.0",
    "huggingface-hub>=0.23.0",
    "pydantic>=2.7.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.scripts]
fable5 = "fable5_dataset.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E501"]